# OpenErase

./: .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: ALGORITHMS.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md
include/: cli.h
src/: cli.c  main.c
